# Piper-J3

./: .gitignore  .gitmodules  AviTab.json  J-3.acf  J-3.acf~  J-3_prefs.txt  J-3floats.acf  J-3floats.acf~  J3-Floats.acf  J3-Floats.acf~  J3-Floats_prefs.txt  J3-Tundra.acf  J3.acf  J3.code-workspace  J3_prefs.txt  LICENSE  README.md
.github/workflows/: Compile.yml  make-lin.yml  make-mac.yml  make-win.yml  makefile.yml
airfoils/: USA35B_J3.afl
fmod/: GUIDs.txt  J-3.snd  Master Bank.bank
plugins/J3/: CMakeLists.txt  Makefile
plugins/J3/64/: lin.xpl  mac.xpl  win.xpl
plugins/J3/64/obj64/: misc.cppdep  plugin.cppdep
plugins/J3/src/: misc.c  misc.cpp  misc.h  plugin.c  plugin.cpp  radio.cpp  radio.h
plugins/OpenGPWS/data/: bank_angle.opus  caut_terr.opus  dont_sink.opus  go_around_ws_ahead.opus  gs.opus  gs2.opus  monitor_radar_display.opus  obst_ahead.opus  obst_ahead_pull_up.opus  pull_up.opus  sinkrate.opus  terr.opus  terr2.opus  terr_ahead.opus  terr_ahead_pull_up.opus  too_low_flaps.opus  too_low_gear.opus  too_low_terr.opus  ws.opus  ws_ahead.opus
plugins/OpenGPWS/data/ra/boeing/: 10.opus  100.opus  1000.opus  20.opus  200.opus  2500.opus  30.opus  300.opus  40.opus  400.opus  50.opus  500.opus
plugins/OpenGPWS/data/ra/garmin/: 500.opus
plugins/OpenGPWS/win_x64/: syms.txt
